# cmake_example

./: .gitignore  README.md
00_simple/: CMakeLists.txt
01_static_lib/: CMakeLists.txt  hoge.h
02_dynamic_lib/: CMakeLists.txt  test.c
03_subdirectories/: CMakeLists.txt
03_subdirectories/hoge/: CMakeLists.txt
04_opencv/: CMakeLists.txt  Readme.md  test.cpp
05_pybind11/: Readme.md
06_sdl2/: CMakeLists.txt  test.cpp
07_sdl2_gfx/: CMakeLists.txt  test.cpp
08_glfw/: CMakeLists.txt  test.cpp
09_imgui/: test.cpp
data/: make_raw_img.py  torus.blend  torus.ply
libraries/eigen/: .gitignore  CMakeLists.txt  README.md  main.cpp
libraries/glfw/: CMakeLists.txt  Readme.md  main.cpp  test.cpp
libraries/imgui/: .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp
libraries/open3d/: .gitignore  CMakeLists.txt  Readme.md  flow.cpp  main.cpp
libraries/opencv/: CMakeLists.txt  Readme.md  test.cpp
libraries/pybind11/: .gitignore  CMakeLists.txt  Readme.md  addmdl.cpp  numpytest.cpp  test.py
libraries/sdl2/: CMakeLists.txt  Readme.md  main.cpp
libraries/sdl2_gfx/: CMakeLists.txt  main.cpp
simple/dynamic_lib/: CMakeLists.txt
simple/simple/: CMakeLists.txt
simple/static_lib/: CMakeLists.txt  hoge.hpp  main.cpp
simple/subdirecrtories/: CMakeLists.txt
simple/subdirecrtories/hoge/: CMakeLists.txt  hoge.hpp
