cmake_minimum_required(VERSION 3.9)
project(test)
add_executable(test test.cpp)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
target_link_libraries(test ${SDL2_LIBRARIES})
include_directories(/usr/local/Cellar/sdl2_gfx/1.0.4/include/)
target_link_libraries(test /usr/local/Cellar/sdl2_gfx/1.0.4/lib/libSDL2_gfx.dylib)
